[package]
name = "ex_jack"
version = "0.1.0"
authors = []
edition = "2018"

[lib]
name = "ex_jack"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.24.0"
jack = "0.9"
futures = { version= "0.3.2", features = ["compat"]}

# See https://github.com/rust-lang/rust/issues/59302
[target.x86_64-unknown-linux-musl]
rustflags = [
  "-C", "target-feature=-crt-static"
]

# Provides a small build size, but takes more time to build.
[profile.release]
lto = true
